--- a/MatchaServer/WebRoot/resource/web.html
+++ b/MatchaServer/WebRoot/resource/web.html
@@ -20,7 +20,13 @@
 <!-- END PAGE LEVEL STYLES -->
 
 <link rel="stylesheet" type="text/css" href="./resource/css/style.min.css">
-
+<script src="./resource/js/jquery.min.js" type="text/javascript"></script>
+<script src="./resource/js/jquery.backstretch.min.js" type="text/javascript"></script>
+<script src="./resource/js/echarts.js" type="text/javascript"></script>
+<script src="./resource/js/onload.js" type="text/javascript"></script>
+<script src="./resource/js/tree-module-1.0.js" type="text/javascript"></script>
+<script src="./resource/js/jstree.js" type="text/javascript"></script>
+<script src="./resource/js/charts.js" type="text/javascript"></script>
 <style type="text/css">
 	.container
 	{
@@ -33,17 +39,15 @@
 <body>
 <div class="container">
 	<div class="row">
-		<div class="col-lg-3 tree-demo">
+		<div id="treeDiv" class="col-lg-3 tree-demo" style="overflow:auto;">
 			<div id="tree_module"></div>
+		</div>
+		<div class="col-lg-8">
+			<div id="charsId" style="width:100%">
+			</div>
 		</div>
 	</div>
 </div>
-
-<script src="./resource/js/jquery.min.js" type="text/javascript"></script>
-<script src="./resource/js/jquery.backstretch.min.js" type="text/javascript"></script>
-<script src="./resource/js/page_coming_sonn.js" type="text/javascript"></script>
-<script src="./resource/js/tree-module-1.0.js" type="text/javascript"></script>
-<script src="./resource/js/jstree.js" type="text/javascript"></script>
 
 <!-- END PAGE LEVEL PLUGINS -->
 <script>
